--- a/src/components/atoms/Dropdown/styles.module.css
+++ b/src/components/atoms/Dropdown/styles.module.css
@@ -3,16 +3,19 @@
 		opacity: 0;
 		transform: scale(0.96);
 	}
+
 	to {
 		opacity: 1;
 		transform: scale(1);
 	}
 }
+
 @keyframes contentHide {
 	from {
 		opacity: 1;
 		transform: scale(1);
 	}
+
 	to {
 		opacity: 0;
 		transform: scale(0.96);
@@ -20,10 +23,11 @@
 }
 
 .content {
-	@apply flex flex-col rounded-xl border border-pv-blue-200 bg-white p-2 min-w-52 shadow-xl;
+	@apply flex flex-col rounded-xl border border-pv-blue-200 bg-white p-2 min-w-52 shadow-xl z-10;
 	transform-origin: var(--kb-menu-content-transform-origin);
 	animation: contentHide 250ms ease-in forwards;
 }
+
 .content[data-expanded] {
 	animation: contentShow 250ms ease-out;
 }
